Sağlam yol kat edildi zannımca. daha çalıştırmadım ama şimdi file offer answer görme üzerine uğraşıcam.

--- a/DesktopApp/Views/SubViews/MesageBox.xaml
+++ b/DesktopApp/Views/SubViews/MesageBox.xaml
@@ -62,7 +62,7 @@
                   Background="Transparent"
                   HorizontalAlignment="Stretch"
                   VerticalAlignment="Stretch"
-                  ItemsSource="{Binding MessageItems}"
+                  ItemsSource="{Binding AllMessagesOnInterfaceCollection}"
                   SelectionMode="None"
                   ElementSoundMode="FocusOnly">
             <ListView.ItemsPanel>
