--- a/DesktopApp/Views/SubViews/FileBox.xaml
+++ b/DesktopApp/Views/SubViews/FileBox.xaml
@@ -49,7 +49,7 @@
         </Grid>
         <ListView Name="FileList"
                   Grid.Row="1"
-                  ItemsSource="{Binding FileItems}">
+                  ItemsSource="{Binding AllFilesOnInterfaceCollection}">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsStackPanel VerticalAlignment="Bottom"
