--- a/DesktopApp/Views/SubViews/MesageBox.xaml
+++ b/DesktopApp/Views/SubViews/MesageBox.xaml
@@ -111,6 +111,8 @@
                                             Background="Transparent"
                                             HorizontalContentAlignment="Left"
                                             HorizontalAlignment="Left"
+                                            Command="{Binding AcceptCommand}"
+                                            CommandParameter="{Binding File.Id}"
                                             Visibility="{Binding IsFileExist,Converter={StaticResource EnumExistToBooleanConverter},ConverterParameter='Yes'}">
                                         <StackPanel Orientation="Horizontal"
                                                     VerticalAlignment="Stretch"
@@ -185,6 +187,8 @@
                                             Background="Transparent"
                                             HorizontalContentAlignment="Left"
                                             HorizontalAlignment="Left"
+                                            Command="{Binding OfferFileAnswerCommand}"
+                                            CommandParameter="{Binding File.Id}"
                                             Visibility="{Binding IsFileExist,Converter={StaticResource EnumExistToBooleanConverter},ConverterParameter='Yes'}">
                                         <StackPanel Orientation="Horizontal"
                                                     VerticalAlignment="Stretch"
@@ -294,7 +298,7 @@
                          Height="40"
                          MinHeight="40"
                          MaxHeight="40"
-                         Command="{Binding AddCommand}">
+                         Command="{Binding OfferCommand}">
                     <SymbolIcon Symbol="Attach" />
                 </Button>
                 <Button  Grid.Column="3"
@@ -302,7 +306,8 @@
                          Width="auto"
                          Height="40"
                          MinHeight="40"
-                         MaxHeight="40">
+                         MaxHeight="40"
+                         Command="{Binding SendCommand}">
                     <SymbolIcon Symbol="Send" />
                 </Button>
             </Grid>
